an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
11/1/2025:
[!] Hey again! Sorry for such a delay on the update, I've been a little busy
but I'm back.
[!] Shoutout to GN Math! Without them I wouldn't have these exclusive games!
:D
[+] Added Kindergarten 1
[+] Added Kindergarten 2
[+] Added Kindergarten 3
[+] Added Balatro
[+] Added Karlson
[+] Added Yandere Simulator
[+] Added Bendy and the Ink Machine
[-] Removed the survey banner as it isn't needed anymore (thanks for all
the feedback!)

09/27/2025:
[!] Hey! I'm probably going to take a small break from adding suggestions.
It's been getting a little much, suggestion form will still be up but I'm
probably going to slow down and work on some other features and bugs first.
I appreciate all the suggestions though! It's just with all the new users
and everything it's been getting a little much, I'm a solo developer after
all.
[+] Fixed Talking Angela (Thanks for the bug report Jonathon)
[-] Removed Moto X3M & Moto X3M Winter due to them being broken. Will
re-add when I decide to fix them. (Thanks for the bug report zekes37)

09/24/2025:
[!] Hey everyone! I really do appreciate all the support I've been getting
recently. It means a lot!
[+] Added Stickman Hook (Thanks for the suggestion Enrique)
[+] Added Monkey Mart (Thanks for the suggestion Enrique)
[+] Fixed Mike Tyson's Punch Out!!
[+] Fixed Papa's Burgeria
[+] Added the other Papa's games (Bakeria, Cheeseria, Cupcakeria, Donuteria,
Freezeria, Hot Doggeria, Pancakeria, Pastaria, Pizzeria, and Scooperia)
[+] Fixed Acid Bunny (Thanks for the bug report)

09/23/2025: